--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,8 @@
 $sq_black : #393838;
 $sq_red : #EA596E;
 $sq_cream : #F7F7F7;
-$sq_cream : #F7F7F7;
 $sq_dark_gray : #646464;
 $sq_light_gray : #AFAFAF;
+$sq_orange: #E69845;
+$sq_green: #4EB464;
+$sq_teal: #00B6DE;
