--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $sq_cream;
+	color: $sq_black;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/
