--- a/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
+++ b/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
@@ -1,1 +1,24 @@
-.MultiSelect {}
+@import "../../../../variables";
+
+.MultiSelect {
+  margin: 20px 0 40px;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    border: 1px solid $sq_light_gray;
+    padding: 15px 20px;
+    position: relative;
+    box-sizing: border-box;
+    transition-duration: 0.05s;
+    outline: 0 solid $sq_dark_gray;
+
+    &:focus-visible {
+      outline: 2px solid $sq_dark_gray;
+      border-color: $sq_dark_gray;
+
+  }
+
+  span {
+    width: 100%;
+  }
+}
