--- a/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
+++ b/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
@@ -2,23 +2,37 @@
 
 .MultiSelect {
   margin: 20px 0 40px;
-    width: 100%;
-    height: 40px;
-    border-radius: 10px;
-    border: 1px solid $sq_light_gray;
-    padding: 15px 20px;
-    position: relative;
-    box-sizing: border-box;
-    transition-duration: 0.05s;
-    outline: 0 solid $sq_dark_gray;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid $sq_light_gray;
+  position: relative;
+  box-sizing: border-box;
+  transition-duration: 0.05s;
+  outline: 0 solid $sq_dark_gray;
+  display: flex;
+  align-items: center;
+  padding: 20px 15px;
+  flex-wrap: wrap;
+  gap: 10px;
 
-    &:focus-visible {
-      outline: 2px solid $sq_dark_gray;
-      border-color: $sq_dark_gray;
-
+  &:focus-visible {
+    outline: 2px solid $sq_dark_gray;
+    border-color: $sq_dark_gray;
   }
 
-  span {
-    width: 100%;
+  .selection {
+    padding: 5px;
+    background-color: #EA596E;
+    border-radius: 5px;
+
+    p, button {
+      display: inline;
+      color: white;
+    }
+
+    button {
+      background-color: #EA596E;
+      border: none;
+    }
   }
 }
