--- a/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
+++ b/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
@@ -7,7 +7,9 @@
     position: relative;
     box-sizing: border-box;
     transition-duration: 0.05s;
-    outline: 0 solid $sq_dark_gray;
+    // outline: 0 solid $sq_dark_gray;
+    outline: 1px solid $sq_light_gray;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     // padding: 10px 15px;
@@ -17,16 +19,21 @@
     background-color: #FFFFFF;
 
     &:focus-within {
+      // border: none;
       outline: 2px solid $sq_dark_gray;
       border-color: $sq_dark_gray;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+
     }
 
     .selection {
       padding: 5px;
+      padding-right: 0;
       margin: 0 1px;
-      background-color: $sq_cream;
       border: $sq_light_gray 1px solid;
       border-radius: 5px;
+      background-color: #F7F7F7;
 
       p, button {
         display: inline;
@@ -48,18 +55,23 @@
   }
 
   .autocomplete {
+    width: 100%;
+    background-color: #fff;
     border-radius: 10px;
-    border: 1px solid $sq_light_gray;
+    margin: 0;
+    // border: 1px solid $sq_light_gray;
+    outline: 2px solid $sq_dark_gray;
     position: absolute;
     box-sizing: border-box;
     transition-duration: 0.05s;
-    outline: 0 solid $sq_dark_gray;
+    // outline: 0 solid $sq_dark_gray;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
 
-
+    .autocompleteoption {
+      height: 57px;
+      border: 1px solid #AFAFAF;
+      padding: 5px;
+    }
   }
-
-  .autocomplete:last-child {
-    background-color: red;
-  }
-
 }
