made multi select change styling on focus. fixed the search to query api & display results

--- a/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
+++ b/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     transition-duration: 0.05s;
     // outline: 0 solid $sq_dark_gray;
-    outline: 1px solid $sq_light_gray;
+    border: 1px solid $sq_light_gray;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -17,15 +17,6 @@
     flex-wrap: wrap;
     gap: 5px;
     background-color: #FFFFFF;
-
-    &:focus-within {
-      // border: none;
-      outline: 2px solid $sq_dark_gray;
-      border-color: $sq_dark_gray;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-
-    }
 
     .selection {
       padding: 5px;
@@ -51,13 +42,32 @@
       padding: 5px 10px;
       border: none;
       outline: none;
+      z-index: 2;
     }
+
+    .placeholder {
+      position: absolute;
+      padding: 5px 10px;
+      border: none;
+      outline: none;
+      z-index: 1;
+    }
+  }
+
+  .focused {
+    // border: none;
+    outline: 2px solid $sq_dark_gray;
+    border-color: $sq_dark_gray;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
   }
 
   .autocomplete {
     width: 100%;
     background-color: #fff;
     border-radius: 10px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
     margin: 0;
     // border: 1px solid $sq_light_gray;
     outline: 2px solid $sq_dark_gray;
@@ -65,13 +75,17 @@
     box-sizing: border-box;
     transition-duration: 0.05s;
     // outline: 0 solid $sq_dark_gray;
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
 
     .autocompleteoption {
-      height: 57px;
       border: 1px solid #AFAFAF;
-      padding: 5px;
+      padding: 20px;
+      cursor: pointer;
+
+      b {
+        font-weight: bold;
+        color: #EA596E
+      }
     }
   }
+
 }
