a couple fixes to multi select: only expands when there are possible options already selected options are now removed from search results

--- a/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
+++ b/src/components/UI/FormInput/MultiSelect/MultiSelect.module.scss
@@ -56,6 +56,9 @@
     // border: none;
     outline: 2px solid $sq_dark_gray;
     border-color: $sq_dark_gray;
+  }
+
+  .focusedwithresults {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
