--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -2,7 +2,6 @@
 
 .Button {
   padding: 10px 20px;
-  background-color: #EA596E;
   color: white;
   width: min-content;
   border-radius: 10px;
@@ -15,6 +14,13 @@
   box-sizing: border-box;
   font-size: 15px;
 
+  &.primary {
+    background-color: #EA596E;
+  }
+
+  &.default {
+    background-color: #393838;
+  }
 
   &:hover, &:focus-visible {
     outline: 3px solid $sq_dark_gray;
