--- a/src/components/UI/SystemMessage/SystemMessage.module.scss
+++ b/src/components/UI/SystemMessage/SystemMessage.module.scss
@@ -1,1 +1,7 @@
-.SystemMessage {}
+@import url("../../../_variables.scss");
+
+.SystemMessage {
+  border: 2px solid black;
+  padding: 10px 20px;
+  width: 100%;
+}
