buttons may now specify a url to link to

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,33 +1,38 @@
 @import "../../../variables";
 
 .Button {
-  padding: 10px 20px;
-  color: white;
   width: min-content;
-  border-radius: 10px;
-  align-items: center;
-  display: flex;
   height: 40px;
   font-weight: bold;
   margin: 20px 0;
-  border: none;
-  box-sizing: border-box;
-  font-size: 15px;
+  text-decoration: none;
 
-  &.primary {
+  button {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    box-sizing: border-box;
+    height: 40px;
+    color: white;
+    border-radius: 10px;
+    padding: 10px 20px;
+    border: none;
+
+    &:hover, &:focus-visible {
+      outline: 3px solid $sq_dark_gray;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  button.primary {
     background-color: #EA596E;
   }
 
-  &.default {
+  button.default {
     background-color: #393838;
-  }
-
-  &:hover, &:focus-visible {
-    outline: 3px solid $sq_dark_gray;
-  }
-
-  &:hover {
-    cursor: pointer;
   }
 
   .Icon {
