--- a/src/components/UI/SystemMessage/SystemMessage.module.scss
+++ b/src/components/UI/SystemMessage/SystemMessage.module.scss
@@ -1,9 +1,129 @@
-@import "../../../_variables.scss";
-
 .SystemMessage {
-  border: 2px solid $sq_red;
-  padding: 10px 20px;
-  width: 100%;
-  box-sizing: border-box;
-  border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: justify;
+    border-radius: 15px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 0.5%;
+    padding-top: 0.5%; 
+    display: inline-block;
+    width: 10%;
+
+    p {
+        color: black;
+    }
+  }
+
+.PopUpModal {
+    z-index: 1;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.2);
 }
+
+.PopUpSystemMessage {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: justify;
+    position: fixed;
+    top: 25%;
+    left: 25%;
+    border-radius: 15px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 0.5%;
+    padding-top: 0.5%; 
+    display: inline-block;
+    width: 40%;
+    height: 40%; 
+    p {
+        color: black;
+    }
+}
+  
+.warning {
+    color: #ea596e;
+    background-color: #fff3f6;
+    border-radius: 15px;
+    border: 2px solid #ea596e;
+
+    h1 {
+        color: #ea596e;
+        font-size: 23px;
+    }
+
+    a:link {
+        color: #ea596e;
+    }
+    
+    a:visited {
+        color: #ea596e;
+    }
+
+    span {
+      display: block;
+      float: right;
+      color: #ea596e;
+      font-size: 15px;
+    }
+  }
+  
+.alert {
+    color: #de9300;
+    background-color: #fffcf1;
+    border-radius: 15px;
+    border: 2px solid #e69845;
+
+    p1 {
+        color: #de9300;
+        font-size: 23px;       
+    }
+
+    a:link {
+        color: #de9300;
+    }
+
+    a:visited {
+        color: #de9300;
+    }
+
+    span {
+      float: right;
+      color: #de9300;
+      font-size: 15px;
+    }
+  }
+  
+.information {
+    color: #00b6de;
+    background-color: #f1fbff;
+    border-radius: 15px;
+    border: 2px solid #00b6de;
+    
+    p1 {
+        color: #00b6de;
+        font-size: 23px;
+    }
+
+    a:link {
+        color: #00b6de;
+    }
+
+    a:visited {
+        color: #00b6de;
+    }
+
+    span {
+      float: right;
+      color: #00b6de;
+      font-size: 15px;
+    }
+  }
+
+  
+  
