--- a/app/templates/emails/body/Verify.html
+++ b/app/templates/emails/body/Verify.html
@@ -4,11 +4,11 @@ You have registered a {{name}} account at:
 {{url_root}}
 
 IF you forget your password, you can request another via the link below
-{{password_reset_redirect_link}}
+{{url_root}}{{password_reset_redirect_link}}
 
 Here are the details of your account:
-Full Name: {{user.first_name}} {{user.first_last}}
+Full Name: {{user.first_name}} {{user.last_name}}
 Email: {{user.email}}
 
 To make sure that this account does indeed belong to you, please follow the following link to verify it:
-{{verify_url}}
+{{url_root}}{{verify_url}}
