made the hour input function

--- a/src/components/UI/FormInput/HoursInput/HoursInput.module.scss
+++ b/src/components/UI/FormInput/HoursInput/HoursInput.module.scss
@@ -1,1 +1,10 @@
-.HoursInput {}
+.HoursInput {
+  position: relative;
+  .clockFace {
+  }
+  
+  .segment {
+    position: absolute;
+    left: 0;
+  }
+}
