--- a/src/components/UI/FormInput/HoursInput/HoursInput.module.scss
+++ b/src/components/UI/FormInput/HoursInput/HoursInput.module.scss
@@ -1,7 +1,13 @@
 .HoursInput {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  .clocks {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 
   .times {
     display: flex;
