now displays some workshop boxes

--- a/src/routes/workshops/ViewWorkshops/ViewWorkshops.module.scss
+++ b/src/routes/workshops/ViewWorkshops/ViewWorkshops.module.scss
@@ -1,1 +1,23 @@
-.ViewWorkshops {}
+@import "../../../variables";
+
+.ViewWorkshops {
+  .workshop {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid $sq_light_gray;
+    padding: 15px 20px;
+    position: relative;
+    box-sizing: border-box;
+    transition-duration: 0.05s;
+    outline: 0 solid $sq_dark_gray;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+
+    &:focus-visible, &:hover {
+      outline: 2px solid $sq_dark_gray;
+      border-color: $sq_dark_gray;
+    }
+  }
+}
