--- a/src/routes/Auth/Register/VerifyEmail/VerifyEmail.module.scss
+++ b/src/routes/Auth/Register/VerifyEmail/VerifyEmail.module.scss
@@ -1,10 +1,9 @@
-@import "../../../_variables.scss";
+@import "../../../../_variables.scss";
 .VerifyEmail {
   h1 {
     font-weight: 900;
     font-size: 25pt;
     color: $sq_black;
-    margin-top: 20px;
   }
 
   h2 {
@@ -15,6 +14,4 @@
     color: $sq_dark_gray;
     margin-bottom: 60px;
   }
-
-  
 }
