--- a/src/routes/Dashboard/Dashboard.module.scss
+++ b/src/routes/Dashboard/Dashboard.module.scss
@@ -1,5 +1,12 @@
-.signup {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+// .signup {
+//   display: flex;
+//   align-items: center;
+//   gap: 1rem;
+// }
+
+.Section {
+  margin: 10px 0 60px 0;
+  .Title {
+    font-size: 15px;
+  }
 }
