add pie view to the page

--- a/src/routes/learn/PlansOfAction/PlansOfAction.module.scss
+++ b/src/routes/learn/PlansOfAction/PlansOfAction.module.scss
@@ -1,6 +1,11 @@
 @import "../../../variables";
 
 .PlansOfAction {
+  .stats {
+    display: flex;
+    justify-content: center;
+  }
+
   .plan {
     display: flex;
     align-items: center;
