--- a/src/components/UI/FormInput/TextInput/TextInput.module.scss
+++ b/src/components/UI/FormInput/TextInput/TextInput.module.scss
@@ -2,7 +2,8 @@
 
 .TextInput {
   margin: 20px 0 40px;
-  input{
+  input,
+  textarea {
     width: 100%;
     height: 40px;
     border-radius: 10px;
@@ -13,10 +14,14 @@
     transition-duration: 0.05s;
     outline: 0 solid $sq_dark_gray;
 
-    &:focus-visible, &:hover {
+    &:focus-visible,
+    &:hover {
       outline: 2px solid $sq_dark_gray;
       border-color: $sq_dark_gray;
     }
   }
-}
 
+  textarea {
+    height: 300px;
+  }
+}
