--- a/src/components/UI/FormInput/HoursInput/HoursInput.module.scss
+++ b/src/components/UI/FormInput/HoursInput/HoursInput.module.scss
@@ -1,7 +1,12 @@
 .HoursInput {
+  margin: 20px 0 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .label {
+    width: 100%;
+  }
 
   .clocks {
     display: flex;
