--- a/src/routes/UpcomingEvents/Event/Event.module.scss
+++ b/src/routes/UpcomingEvents/Event/Event.module.scss
@@ -1,30 +1,24 @@
 @import '../../../_variables.scss';
 
 .Event {
-  text-align: center;
-
   .splitCard {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: flex-start;
     flex-direction: row;
-    gap: 10px;
+    gap: 15px;
     // width: 100%;
     // flex-wrap: nowrap;
   }
-  .splitCard div {
-    // flex: 1;
-    //  display: inline-block;
-  }
 
   .dateTimeSquare {
+    text-align: center;
+    align-items: center;
     background-color: $sq_teal;
     border-radius: 10px;
     color: white;
-    padding: 10px 5px;
-    font-size: 15px;
+    padding: 10px 7px;
+    font-size: 14px;
     font-weight: bold;
-    letter-spacing: -0.5px;
 
     span {
       font-size: 30px;
@@ -32,13 +26,20 @@
   }
 
   .details {
-    align-items: center;
+    //  align-items: center;
     font-size: 14px;
+
+    div {
+      font-weight: bold;
+    }
+    div span {
+      font-weight: normal;
+    }
 
     .sessionType {
       font-weight: bold;
       font-size: 20px;
-      margin-bottom: 2px;
+      margin-bottom: 5px;
     }
   }
 }
