working on findmentor

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -39,6 +39,8 @@
   .Icon {
     transition-duration: 0.09s;
     height: 100%;
-    margin-right: 20px;
+  }
+  .Description {
+    margin-left: 20px;
   }
 }
