--- a/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
+++ b/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
@@ -1,1 +1,24 @@
-.MenteeCard {}
+.MenteeCard {
+    display: block;
+    position: relative;
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: bold;
+    background-color: #FFFFFF;
+    border: 1px solid #D3D3D3;
+    box-sizing: border-box;
+    border-radius: 10px;
+    width: 300px;
+    height: 160px;
+    padding-top: 20px;
+    padding-left: 20px;
+    margin-bottom: 30px;
+}
+
+.ButtonFloat {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+}
