--- a/src/components/UI/FormInput/SearchSelect/DraggableSelectedOptions/DraggableSelectedOptions.module.scss
+++ b/src/components/UI/FormInput/SearchSelect/DraggableSelectedOptions/DraggableSelectedOptions.module.scss
@@ -1,21 +1,34 @@
 @import "../../../../../variables";
 
-.SelectedOption {
-  padding: 3px 5px;
-  // padding-right: 0;
-  margin: 0 5px 0 0;
-  border: $sq_light_gray 1px solid;
-  border-radius: 5px;
-  background-color: $sq_cream;
+.DraggableOptions {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
 
-  p,
-  button {
-    display: inline;
-    color: #393838;
-  }
+  .DraggableOption {
+    width: 100%;
+    height: 51px;
+    border-radius: 10px;
+    border: 1px solid $sq_light_gray;
+    padding: 10px 20px;
+    position: relative;
+    box-sizing: border-box;
+    transition-duration: 0.05s;
+    outline: 0 solid $sq_dark_gray;
+    background-color: $sq_cream;
+    display: flex;
+    align-items: center;
 
-  button {
-    background-color: #f7f7f7;
-    border: none;
+    p,
+    button {
+      display: inline;
+      color: #393838;
+    }
+
+    button {
+      background-color: #f7f7f7;
+      border: none;
+    }
   }
 }
