--- a/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
+++ b/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
@@ -1,5 +1,5 @@
 .MenteeCard {
-    display: block;
+    display: inline-block;
     position: relative;
     color: black;
     font-family: "Inter", sans-serif;
@@ -10,15 +10,21 @@
     border: 1px solid #D3D3D3;
     box-sizing: border-box;
     border-radius: 10px;
-    width: 300px;
+    width: 280px;
     height: 160px;
     padding-top: 20px;
-    padding-left: 20px;
     margin-bottom: 30px;
+    margin-right: 30px;
+    text-align: center;
+
+    &:hover,
+    &:focus-visible {
+      outline: 3px solid #646464;
+    }
 }
 
 .ButtonFloat {
     position: absolute;
-    left: 20px;
+    left: 65px;
     bottom: 20px;
 }
