--- a/src/components/UI/FormInput/SearchSelect/DraggableSelectedOptions/DraggableSelectedOptions.module.scss
+++ b/src/components/UI/FormInput/SearchSelect/DraggableSelectedOptions/DraggableSelectedOptions.module.scss
@@ -3,10 +3,11 @@
 .DraggableOptions {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  margin-top: 2rem;
 
   .DraggableOption {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 51px;
     border-radius: 10px;
