--- a/src/components/UI/BarChart/BarChart.module.scss
+++ b/src/components/UI/BarChart/BarChart.module.scss
@@ -1,14 +1,15 @@
 .BarChart {
-    width: 90%;
+    width: 85%;
+    height: 7px;
     color: #393838;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5px;
+    margin-top: 10px;
     border-radius: 10px;
 }
 
 .Container {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 p {
