--- a/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
+++ b/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
@@ -4,6 +4,7 @@
     color: black;
     font-family: "Inter", sans-serif;
     font-size: 20px;
+    text-decoration: none;
     font-style: normal;
     font-weight: bold;
     background-color: #FFFFFF;
@@ -25,6 +26,6 @@
 
 .ButtonFloat {
     position: absolute;
-    left: 65px;
+    left: 49px;
     bottom: 20px;
 }
