--- a/src/components/UI/Card/Card.module.scss
+++ b/src/components/UI/Card/Card.module.scss
@@ -14,3 +14,9 @@
   transition-duration: 0.05s;
   outline: 0 solid $sq_dark_gray;
 }
+// .Card {
+//   border: 1px solid $sq_light_gray;
+//   padding: 15px 20px;
+//   background-color: white;
+//   border-radius: 10px;
+// }
