--- a/src/routes/mentor/YourMentees/YourMentees.module.scss
+++ b/src/routes/mentor/YourMentees/YourMentees.module.scss
@@ -1,1 +1,6 @@
-.YourMentees {}
+.YourMentees {
+    font-size: 15px;
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    color: #646464;
+}
