--- a/src/routes/UpcomingEvents/UpcomingEvents.module.scss
+++ b/src/routes/UpcomingEvents/UpcomingEvents.module.scss
@@ -5,3 +5,37 @@
   flex-wrap: wrap;
   gap: 20px;
 }
+
+.buttonDiv {
+  display: flex;
+
+  button {
+    border-radius: 0;
+    z-index: 1;
+    position: relative;
+    // width: 100px;
+
+    div {
+      margin: 0 !important;
+    }
+
+    &:hover,
+    &:focus-visible {
+      z-index: 10 !important;
+    }
+  }
+
+  .active button {
+    background-color: red !important;
+  }
+
+  .firstButton button {
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+  }
+
+  .lastButton button {
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+}
