work on interests and skills order + a bit on meetings

--- a/src/components/UI/FormInput/SearchSelect/SearchSelect.module.scss
+++ b/src/components/UI/FormInput/SearchSelect/SearchSelect.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../variables';
+@import "../../../../variables";
 
 .MultiSelect {
   margin: 20px 0 40px;
@@ -18,7 +18,6 @@
     background-color: #ffffff;
     line-height: 15px;
     font-size: 13.3px;
-
     .search,
     .placeholder {
       padding: 5px 10px 5px 0;
