--- a/src/components/UI/Card/Card.module.scss
+++ b/src/components/UI/Card/Card.module.scss
@@ -1,10 +1,10 @@
-@import '../../../_variables.scss';
+@import "../../../_variables.scss";
 
 // .Card {
 //   background-color: white;
 //   width: 100%;
 //   margin: 20px 0 40px;
-// 
+//
 //   border-radius: 10px;
 //   border: 1px solid $sq_light_gray;
 //   padding: 40px 20px;
@@ -18,4 +18,5 @@
   padding: 15px 20px;
   background-color: white;
   border-radius: 10px;
+  width: 100%;
 }
