--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,4 +1,4 @@
-@import '../../../variables';
+@import "../../../variables";
 
 .Button {
   width: min-content;
@@ -18,6 +18,7 @@
     border-radius: 10px;
     padding: 10px 20px;
     border: none;
+    white-space: nowrap;
 
     &:hover,
     &:focus-visible {
