--- a/src/routes/Dashboard/Dashboard.module.scss
+++ b/src/routes/Dashboard/Dashboard.module.scss
@@ -30,3 +30,36 @@
     margin-left: 20px;
   }
 }
+
+.SwitchWrapper {
+  width: 100%;
+}
+
+.Switch {
+  background-color: $sq_black;
+  height: 60px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  border-top: 1px solid #c1c1c1;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  gap: 25px;
+  overflow: scroll;
+  .Button {
+    width: fit-content;
+    margin: 0;
+    background-color: transparent;
+
+    &.selected > button {
+      border-color: $sq_red;
+    }
+
+    & > button {
+      border: 2px solid white;
+    }
+  }
+}
