--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .App {
   text-align: left;
@@ -9,4 +9,32 @@
   min-height: 100vh;
 }
 
+@media only screen and (min-width: 600px) {
+  .App {
+    margin: 0 150px;
+  }
+}
 
+@media only screen and (min-width: 800px) {
+  .App {
+    margin: 0 250px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .App {
+    margin: 0 350px;
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+  .App {
+    margin: 0 550px;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  .App {
+    margin: 0 550px;
+  }
+}
