--- a/src/components/UI/SystemMessage/SystemMessage.module.scss
+++ b/src/components/UI/SystemMessage/SystemMessage.module.scss
@@ -5,7 +5,8 @@
   font-weight: bold;
   border-radius: 15px;
   padding: 20px;
-
+  max-width: 350px;
+  width: fit-content;
   display: inline-block;
   width: 100%;
   margin: 10px 0;
