working on meetings

--- a/src/components/UI/PageStepper/PageStepper.module.scss
+++ b/src/components/UI/PageStepper/PageStepper.module.scss
@@ -25,9 +25,9 @@
     &:hover {
       cursor: pointer;
     }
-    
+
     .flip {
-      rotate: 180deg;
+      transform: rotate(180deg);
     }
   }
 
