--- a/src/components/UI/BarChart/BarChart.module.scss
+++ b/src/components/UI/BarChart/BarChart.module.scss
@@ -1,19 +1,20 @@
+@import "../../../variables";
 .BarChart {
-    width: 100%;
-    height: 7px;
-    color: #393838;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    border-radius: 10px;
+  width: 100%;
+  height: 10px;
+  color: $sq_dark_gray;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  border-radius: 10px;
 }
 
 .Container {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
-p {
-    font-size: 12px;
-    font-family: "Inter", sans-serif;
-    color:#646464;
+p.subtext {
+  font-size: 12px;
+  color: $sq_dark_gray;
+  margin: 5px 0;
 }
