--- a/src/components/UI/Tag/Tag.module.scss
+++ b/src/components/UI/Tag/Tag.module.scss
@@ -7,6 +7,7 @@
   border: $sq_light_gray 1px solid;
   border-radius: 5px;
   background-color: $sq_cream;
+  height: 25px;
   text-transform: capitalize;
   p {
     display: inline;
