--- a/src/routes/Homepage/Homepage.module.scss
+++ b/src/routes/Homepage/Homepage.module.scss
@@ -5,8 +5,24 @@
   justify-content: center;
   height: 100vh;
 
+  .logo {
+    width: 100%;
+    max-width: 600px;
+  }
+
   .buttons {
     display: flex;
     gap: 2rem;
+  }
+
+  .animationholder {
+    position: fixed;
+    z-index: -1;
+
+    .fallingshape {
+      position: fixed;
+      width: 25px;
+      z-index: -1;
+    }
   }
 }
