--- a/src/routes/EditPlansOfAction/EditPlansOfAction.module.scss
+++ b/src/routes/EditPlansOfAction/EditPlansOfAction.module.scss
@@ -1,11 +1,11 @@
-@import "../../../variables";
+@import "../../variables";
 
 .EditPlansOfAction {
   .selectedplanwrapper {
     cursor: grabbing;
     z-index: 1;
     position: relative;
-    
+
     .selectedplan {
       cursor: grabbing;
       z-index: 1;
@@ -32,7 +32,8 @@
     cursor: grab;
     background-color: white;
 
-    &:focus-visible, &:hover {
+    &:focus-visible,
+    &:hover {
       outline: 2px solid $sq_dark_gray;
       border-color: $sq_dark_gray;
     }
@@ -56,7 +57,8 @@
         font-family: "Inter", sans-serif;
         width: 100%;
 
-        &:focus-visible, &:hover {
+        &:focus-visible,
+        &:hover {
           outline: 1px solid $sq_dark_gray;
           border-color: $sq_dark_gray;
         }
@@ -72,7 +74,8 @@
       height: 20px;
       width: 100%;
 
-      &:focus-visible, &:hover {
+      &:focus-visible,
+      &:hover {
         outline: 1px solid $sq_dark_gray;
         border-color: $sq_dark_gray;
       }
