--- a/src/routes/Setup/Setup.module.scss
+++ b/src/routes/Setup/Setup.module.scss
@@ -1,13 +1,13 @@
 @import "../../_variables.scss";
 
 .Setup {
-  h1 {
+  .h1 {
     font-weight: 900;
     font-size: 25pt;
     color: $sq_black;
   }
 
-  h2 {
+  .h2 {
     font-weight: bold;
     font-size: 21px;
     margin-bottom: 10px;
@@ -16,7 +16,7 @@
     color: $sq_dark_gray;
   }
 
-  h3 {
+  .h3 {
     font-weight: 700;
     font-size: 14px;
     margin-bottom: 50px;
@@ -25,7 +25,7 @@
     color: $sq_dark_gray;
   }
 
-  a {
+  .a {
     color: $sq_dark_gray;
     font-weight: bold;
     font-size: 17px;
